--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,3 +5,13 @@
 body {
   @apply bg-slate-950 text-slate-50;
 }
+
+/* Deter casual saving/downloading of media */
+img, picture, video, canvas {
+  -webkit-user-drag: none;
+  user-drag: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
+  -webkit-touch-callout: none;
+}
